force-app/main/default/objects/SVMXC__Service_Contract__c/SVMXC__Service_Contract__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Service Contract documents details of entitlement provided to a customer for products bought. Usually shipped/delivered products are covered for a predefined period through a basic warranty. If customers wish to get coverage for repairs beyond the normal warranty period, they normally purchase extended service contracts. Service contract is interchangeably referred to as a service agreement as well.</description>
    <label>Service/Maintenance Contract</label>
    <nameField>
        <label>Contract Name/Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service/Maintenance Contracts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>