force-app/main/default/objects/SVMXC__Service_Contract__c/fields/Consumables_Included__c.field-meta.xml
<CustomField>
    <fullName>Consumables_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This entitles 100% discount on Consumables when entitling Cases and Work Orders with applicable Service Contract Line.</description>
    <label>Consumables Included</label>
    <type>Checkbox</type>
</CustomField>