force-app/main/default/objects/SVMXC__Service_Contract__c/fields/Domain_URL_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Domain_URL_Pattern__c</fullName>
    <description> To capture precedes the standard URL specific to an enterprise subscription</description>
    <inlineHelpText>Text that precedes the standard URL specific to an enterprise subscription.</inlineHelpText>
    <label>Domain URL Pattern</label>
    <length>50</length>
    <type>Text</type>
</CustomField>