force-app/main/default/objects/SVMXC__Service_Contract__c/fields/Download_Service_Maintenance_Contract__c.field-meta.xml
<CustomField>
    <fullName>Download_Service_Maintenance_Contract__c</fullName>
    <description>Field to store Account's Download Account To Mobile No value</description>
    <formula>SVMXC__Company__r.Download_Account_To_Mobile_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Download Service / Maintenance Contract</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>