force-app/main/default/objects/SVMXC__Service_Contract__c/fields/ERP_Contract_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contract_Line_Number__c</fullName>
    <description>This is used to reference the ERP Contract ID for the Contract Line used to cross reference the Service Contract of ServiceMax.</description>
    <label>ERP Contract Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>