force-app/main/default/objects/SVMXC__Service_Contract__c/fields/ERP_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contract_Type__c</fullName>
    <description>Type of contract
Details to come in from SAP</description>
    <label>ERP Contract Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>