force-app/main/default/objects/SVMXC__Service_Contract__c/fields/ERP_Header_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Header_Contract_Number__c</fullName>
    <description>This is used to reference the ERP Contract ID for the Header level Contract used to cross reference the Service Contract of ServiceMax.</description>
    <label>ERP Header Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>