force-app/main/default/objects/SVMXC__Service_Contract__c/fields/Gb_Balance__c.field-meta.xml
<CustomField>
    <fullName>Gb_Balance__c</fullName>
    <description>Remaining gigabases if Gb Consumed is not blank.</description>
    <formula>IF(NOT(ISBLANK(Gb_Consumed__c)),Gb_Quota__c - Gb_Consumed__c, Gb_Quota__c)</formula>
    <label>Gb Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>