force-app/main/default/objects/SVMXC__Service_Contract__c/fields/Open_PO_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_PO_End_Date__c</fullName>
    <description>Capture end date for open quantity contract.</description>
    <inlineHelpText>End date for open quantity contract.</inlineHelpText>
    <label>Open PO End Date</label>
    <type>Date</type>
</CustomField>