force-app/main/default/objects/SVMXC__Service_Contract__c/fields/Open_PO_iCredit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Open_PO_iCredit_Balance__c</fullName>
    <description>Capture open icredit balance</description>
    <inlineHelpText>iCredit Balance is managed at the Professional Workgroup / Enterprise Domain level and can be utilized across any Subscriptions associated with that Workgroup or Domain.</inlineHelpText>
    <label>Open PO iCredit Balance </label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>