force-app/main/default/objects/SVMXC__Service_Contract__c/fields/Open_PO_iCredits_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Open_PO_iCredits_Consumed__c</fullName>
    <description>Capture total open icredits consumed</description>
    <inlineHelpText>This is the total amount of open PO iCredits consumed.</inlineHelpText>
    <label>Open PO iCredits Consumed </label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>