force-app/main/default/objects/SVMXC__Service_Contract__c/fields/OQ_Required__c.field-meta.xml
<CustomField>
    <fullName>OQ_Required__c</fullName>
    <description>To show OQ Required field from Service Plan</description>
    <formula>SVMXC__Service_Plan__r.OQ_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OQ Required</label>
    <type>Checkbox</type>
</CustomField>