force-app/main/default/objects/SVMXC__Service_Contract__c/fields/Parts_Included__c.field-meta.xml
<CustomField>
    <fullName>Parts_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This entitles 100% discount on Parts when entitling Cases and Work Orders with Service Contract Line.</description>
    <label>Parts Included</label>
    <type>Checkbox</type>
</CustomField>