force-app/main/default/objects/SVMXC__Service_Contract__c/fields/Pending_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Pending_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Becomes true when contract status received is &apos;Canceled&apos; from integration but end date is still in future. It is used to add logic to prevent premature cancellation of contracts before their end dates.</description>
    <label>Pending Cancellation?</label>
    <type>Checkbox</type>
</CustomField>