force-app/main/default/objects/SVMXC__Service_Contract__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>Field to capture PO number from Order Line Item</description>
	<inlineHelpText>Purchase Order Number from SAP Order.</inlineHelpText>
    <formula>Order_Line_Item__r.Apttus_Config2__OrderId__r.Apttus_Config2__PONumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Number</label>
    <type>Text</type>
</CustomField>