force-app/main/default/objects/SVMXC__Service_Contract__c/fields/Pre_Paid_iCredit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Pre_Paid_iCredit_Balance__c</fullName>
    <description>Capture pre paid iCredit balance</description>
    <inlineHelpText>iCredit Balance is managed at the Professional Workgroup / Enterprise Domain level and can be utilized across any Subscriptions associated with that Workgroup or Domain.</inlineHelpText>
    <label>Pre-Paid iCredit Balance </label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>