force-app/main/default/objects/SVMXC__Service_Contract__c/fields/Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Email__c</fullName>
    <description>Capture primary contact email id</description>
    <inlineHelpText>Purchasing contact identified in ERP system</inlineHelpText>
    <label>Primary Contact Email</label>
    <type>Email</type>
</CustomField>