force-app/main/default/objects/SVMXC__Service_Contract__c/fields/Product_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager_Email__c</fullName>
    <description>Field to map Product Manager's Email from Order Line Item's Product</description>
    <formula>Order_Line_Item__r.Apttus_Config2__ProductId__r.Product_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Manager Email</label>
    <type>Text</type>
</CustomField>