force-app/main/default/objects/SVMXC__Service_Contract__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <businessOwnerUser>gis@illumina.com</businessOwnerUser>
    <description>This field store the region of contract and would be used in sharing rule to provide access to regional field compliance teams.</description>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>