force-app/main/default/objects/SVMXC__Service_Contract__c/fields/Registration_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Registration_Contact_Email__c</fullName>
    <description>Capture email id of registered contact</description>
    <inlineHelpText>Email of the contact who registered the software subscription.</inlineHelpText>
    <label>Registration Contact Email</label>
    <type>Email</type>
</CustomField>