force-app/main/default/objects/SVMXC__Service_Contract__c/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>    
    <description>Registration Status field gives information of Software Product Registration Status which is populated from SAP via SNAP</description>
    <inlineHelpText>The status of software registration or activation</inlineHelpText>
    <label>Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending User Registration</fullName>
            </value>
            <value>
                <fullName>Pending Illumina Fulfillment</fullName>
            </value>
            <value>
                <fullName>Invoiced Pending Registration</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>