force-app/main/default/objects/SVMXC__Service_Contract__c/fields/SVMXC__Active__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating if this contract is currently active or not. This flag is checked automatically when you activate a contract</description>
    <inlineHelpText>Flag indicating if this contract is currently active or not. This flag is checked automatically when you activate a contract</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>