force-app/main/default/objects/SVMXC__Service_Contract__c/fields/SVMXC__All_Products_Covered__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__All_Products_Covered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that indicates if this contract covers all products purchased by this customer.</description>
    <inlineHelpText>Flag that indicates if this contract covers all products purchased by this customer.</inlineHelpText>
    <label>All Products Covered</label>
    <type>Checkbox</type>
</CustomField>