force-app/main/default/objects/SVMXC__Service_Contract__c/fields/SVMXC__All_Services_Covered__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__All_Services_Covered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that indicates if the customer is entitled to all types of services offered. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
    <inlineHelpText>Flag that indicates if the customer is entitled to all types of services offered. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
    <label>All Services Covered</label>
    <type>Checkbox</type>
</CustomField>