force-app/main/default/objects/SVMXC__Service_Contract__c/fields/SVMXC__Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Service_Maintenance_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>