force-app/main/default/objects/SVMXC__Service_Contract__c/fields/SVMXC__Company__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer to whom this service contract is sold. Is a lookup to an existing salesforce account record</description>
    <inlineHelpText>Customer to whom this service contract is sold. Is a lookup to an existing salesforce account record</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service/Maintenance Contracts</relationshipLabel>
    <relationshipName>R00N70000001hzYIEAY</relationshipName>
    <type>Lookup</type>
</CustomField>