force-app/main/default/objects/SVMXC__Service_Contract__c/fields/SVMXC__Contact__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the contact person from the customer account associated with this contract. Is a lookup to an existing salesforce contact record</description>
    <inlineHelpText>Name of the contact person from the customer account associated with this contract. Is a lookup to an existing salesforce contact record</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>R00N70000001hzcEEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>