force-app/main/default/objects/SVMXC__Service_Contract__c/fields/SVMXC__Counter_Usages_Processed_Until__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Counter_Usages_Processed_Until__c</fullName>
    <label>Counter Usages Processed Until</label>
    <type>DateTime</type>
</CustomField>