force-app/main/default/objects/SVMXC__Service_Contract__c/fields/SVMXC__Default_Parts_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Default_Parts_Price_Book__c</fullName>
    <description>Default price book to be used when no parts price is defined</description>
    <label>Default Parts Price Book</label>
    <length>255</length>
    <type>Text</type>
</CustomField>