force-app/main/default/objects/SVMXC__Service_Contract__c/fields/SVMXC__End_Date__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__End_Date__c</fullName>
    <description>End date of the service contract</description>
    <inlineHelpText>End date of the service contract</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>