force-app/main/default/objects/SVMXC__Service_Contract__c/fields/SVMXC__Service_Level__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Service_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service level the customer is entitled to by this contract. Is a lookup to an existing service level record</description>
    <inlineHelpText>Service level the customer is entitled to by this contract. Is a lookup to an existing service level record</inlineHelpText>
    <label>SLA Terms</label>
    <referenceTo>SVMXC__Service_Level__c</referenceTo>
    <relationshipLabel>Service/Maintenance Contracts</relationshipLabel>
    <relationshipName>R00N70000001hzdfEAA</relationshipName>
    <type>Lookup</type>
</CustomField>