force-app/main/default/objects/SVMXC__Service_Contract__c/fields/SVMXC__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Start_Date__c</fullName>
    <description>Start date of the service contract</description>
    <inlineHelpText>Start date of the service contract</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>