force-app/main/default/objects/SVMXC__Service_Contract__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Specifies the Contract Type that will be applied as an Entitlement for Cases, Work Orders and Part Orders.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base Warranty</fullName>
            </value>
            <value>
                <fullName>Extended Warranty</fullName>
            </value>
            <value>
                <fullName>Service Contract</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>