force-app/main/default/objects/SVMXC__Service_Contract__c/fields/Workgroup_ID__c.field-meta.xml
<CustomField>
    <fullName>Workgroup_ID__c</fullName>
    <description>Capture work group id</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for a workgroup associated to a profressional subscription.</inlineHelpText>
    <label>Workgroup ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>