force-app/main/default/objects/SVMXC__Service_Contract__c/fields/Workgroup_Name__c.field-meta.xml
<CustomField>
    <fullName>Workgroup_Name__c</fullName>
    <description>Capture work group name</description>
    <inlineHelpText>Name of workgroup associated to a professional subscription. A workgroup consists of users who share data, storage, and other resources.</inlineHelpText>
    <label>Workgroup Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>