force-app/main/default/objects/SVMXC__Service_Contract__c/recordTypes/Contract_Header.recordType-meta.xml
<RecordType>
    <fullName>Contract_Header</fullName>
    <active>true</active>
    <description>The Header Service Contract</description>
    <label>Contract Header</label>
</RecordType>