force-app/main/default/objects/SVMXC__Service_Contract__c/recordTypes/Contract_Line.recordType-meta.xml
<RecordType>
    <fullName>Contract_Line</fullName>
    <active>true</active>
    <description>The Service Contract Line</description>
    <label>Contract Line</label>
</RecordType>