force-app/main/default/objects/SVMXC__Service_Contract__c/validationRules/SVMXC__Service_Contract_Future_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC__Service_Contract_Future_End_Date</fullName>
    <active>false</active>
    <description>Service contract end date should be in the future</description>
    <errorConditionFormula>AND(ISNEW(),  SVMXC__End_Date__c  &lt;  TODAY())</errorConditionFormula>
    <errorDisplayField>SVMXC__End_Date__c</errorDisplayField>
    <errorMessage>End date should be a future date.</errorMessage>
</ValidationRule>