force-app/main/default/objects/SVMXC__Service_Contract__c/validationRules/SVMXC__Service_Contract_Start_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC__Service_Contract_Start_End_Date</fullName>
    <active>true</active>
    <description>Service contract should have valid start and end dates</description>
    <errorConditionFormula>SVMXC__End_Date__c  &lt;  SVMXC__Start_Date__c</errorConditionFormula>
    <errorDisplayField>SVMXC__End_Date__c</errorDisplayField>
    <errorMessage>End date should be greater or equal to Start date.</errorMessage>
</ValidationRule>