force-app/main/default/objects/SVMXC__Service_Contract__c/listViews/SVMX_PS_SCON_Renewal_OneWeek.listView-meta.xml
<ListView>
    <fullName>SVMX_PS_SCON_Renewal_OneWeek</fullName>
    <columns>NAME</columns>
    <columns>SVMXC__Company__c</columns>
    <columns>SVMXC__Contact__c</columns>
    <columns>SVMXC__Renewal_Date__c</columns>
    <columns>SVMXC__Renewal_Number__c</columns>
    <columns>SVMXC__Start_Date__c</columns>
    <columns>SVMXC__End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SVMXC__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>SVMXC__Weeks_To_Renewal__c</field>
        <operation>lessOrEqual</operation>
        <value>1</value>
    </filters>
    <label>All SCON - Awaiting Renewal - &lt;1 Week</label>
    <language>en_US</language>
</ListView>