force-app/main/default/objects/SVMXC__Service_Contract__c/listViews/SVMXC__Active_Service_Contracts.listView-meta.xml
<ListView>
    <fullName>SVMXC__Active_Service_Contracts</fullName>
    <columns>NAME</columns>
    <columns>SVMXC__Company__c</columns>
    <columns>SVMXC__Contact__c</columns>
    <columns>SVMXC__Renewal_Date__c</columns>
    <columns>SVMXC__Renewal_Number__c</columns>
    <columns>SVMXC__Start_Date__c</columns>
    <columns>SVMXC__End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SVMXC__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Service Contracts</label>
    <language>en_US</language>
</ListView>